[tool.poetry]
name = "avito-test-assignment"
version = "0.1.0"
description = ""
authors = ["Giminosk <giminosk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11"
httpx = "^0.25.0"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
